--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path: ^1.9.0
   camera: ^0.11.0+2
   socket_io_client: ^2.0.3+1
+  curved_navigation_bar: ^1.0.6
+   camera: ^0.10.0
 
 dev_dependencies:
   flutter_test:
