--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path: ^1.9.0
   camera: ^0.11.0+2
   curved_navigation_bar: ^1.0.6
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
