--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.10.5+9
   cupertino_icons: ^1.0.6
   curved_navigation_bar: ^1.0.6
   path_provider: ^2.1.5
