--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   rtmp_broadcaster: ^2.2.6
   video_player: ^2.9.2
   http: ^1.2.2
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
