--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,12 +40,14 @@ android {
         applicationId = "com.example.eyetear"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 24 
+        minSdkVersion 33 
         targetSdkVersion 33
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
-
+    packagingOptions {
+        exclude 'project.clj'
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
