--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,17 @@ allprojects {
         mavenCentral()
     }
     subprojects {
+    afterEvaluate { project ->
+        if (project.plugins.hasPlugin("com.android.application") ||
+                project.plugins.hasPlugin("com.android.library")) {
+            project.android {
+                compileSdkVersion 34
+                buildToolsVersion "34.0.0"
+            }
+        }
+    }
+}
+    subprojects {
         afterEvaluate { project ->
             if (project.hasProperty('android')) {
                 project.android {
